--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -93,14 +93,54 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="max-w-6xl mx-auto">
         <!-- legal area section -->
-        <section>
+        <section class="p-4">
             <!-- section heading -->
-            <div>
-                <h2 class="text-4xl font-extrabold font-heading">The Legal Practice Area</h2 class="text-4xl">
+            <div class="w-1/2 text-center translate-x-1/2 py-20 mx-0">
+                <h2 class="text-3xl sm:text-4xl font-extrabold font-heading pb-4">The Legal Practice Area</h2>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour.</p>
+            </div>
+            <!-- section body -->
+            <div class="grid gap-4 sm:grid-cols-3 sm:grid-rows-2">
+                <!-- cards -->
+                <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
+                    <img class="w-fit" src="images/business.png" alt="">
+                    <h3 class="text-2xl font-bold">Business Law</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="images/Frame.png" alt=""></button>
+                </div>
+                <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
+                    <img class="w-fit" src="images/criminal.png" alt="">
+                    <h3 class="text-2xl font-bold">Business Law</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="images/Frame.png" alt=""></button>
+                </div>
+                <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
+                    <img class="w-fit" src="images/child.png" alt="">
+                    <h3 class="text-2xl font-bold">Business Law</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="images/Frame.png" alt=""></button>
+                </div>
+                <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
+                    <img class="w-fit" src="images/education.png" alt="">
+                    <h3 class="text-2xl font-bold">Business Law</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="images/Frame.png" alt=""></button>
+                </div>
+                <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
+                    <img class="w-fit" src="images/divorce.png" alt="">
+                    <h3 class="text-2xl font-bold">Business Law</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="images/Frame.png" alt=""></button>
+                </div>
+                <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
+                    <img class="w-fit" src="images/tax.png" alt="">
+                    <h3 class="text-2xl font-bold">Business Law</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="images/Frame.png" alt=""></button>
+                </div>
             </div>
         </section>
         <!-- comment section -->
