--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -8,8 +8,9 @@
     <!-- tailwind css linker -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- favicon -->
-    <link rel="icon" href="images/business.png">
-    </link:rl>
+    <link rel="icon" href="images/business.png" />
+    <!-- flowbite -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
     <!-- <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
@@ -108,43 +109,116 @@
                 <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
                     <img class="w-fit" src="images/business.png" alt="">
                     <h3 class="text-2xl font-bold">Business Law</h3>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <button><img src="images/Frame.png" alt=""></button>
                 </div>
                 <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
                     <img class="w-fit" src="images/criminal.png" alt="">
                     <h3 class="text-2xl font-bold">Business Law</h3>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <button><img src="images/Frame.png" alt=""></button>
                 </div>
                 <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
                     <img class="w-fit" src="images/child.png" alt="">
                     <h3 class="text-2xl font-bold">Business Law</h3>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <button><img src="images/Frame.png" alt=""></button>
                 </div>
                 <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
                     <img class="w-fit" src="images/education.png" alt="">
                     <h3 class="text-2xl font-bold">Business Law</h3>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <button><img src="images/Frame.png" alt=""></button>
                 </div>
                 <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
                     <img class="w-fit" src="images/divorce.png" alt="">
                     <h3 class="text-2xl font-bold">Business Law</h3>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <button><img src="images/Frame.png" alt=""></button>
                 </div>
                 <div class="p-16 flex flex-col gap-6 items-center text-center hover:bg-[#E7E7E7]">
                     <img class="w-fit" src="images/tax.png" alt="">
                     <h3 class="text-2xl font-bold">Business Law</h3>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <button><img src="images/Frame.png" alt=""></button>
                 </div>
             </div>
         </section>
         <!-- comment section -->
-        <section></section>
+        <section>
+            <!-- section heading -->
+            <div class="w-1/2 text-center translate-x-1/2 py-20 mx-0">
+                <h2 class="text-3xl sm:text-4xl font-extrabold font-heading pb-4">What Our Client Say</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour.</p>
+            </div>
+            <!-- section body -->
+
+            <div id="indicators-carousel" class="relative w-full" data-carousel="slide">
+                <!-- Carousel wrapper -->
+                <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
+                    <!-- Item 1 -->
+                    <div class="duration-700 ease-in-out" data-carousel-item="active">
+                        <img src="images/slider-1.jpg"
+                            class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+                    </div>
+                    <!-- Item 2 -->
+                    <div class="duration-700 ease-in-out" data-carousel-item>
+                        <img src="images/slider-2.jpg"
+                            class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+                    </div>
+                    <!-- Item 3 -->
+                    <div class="duration-700 ease-in-out" data-carousel-item>
+                        <img src="images/slider-3.jpg"
+                            class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+                    </div>
+                </div>
+                <!-- Slider indicators -->
+                <div class="absolute z-30 flex space-x-3 -translate-x-1/2 bottom-5 left-1/2">
+                    <button type="button" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1"
+                        data-carousel-slide-to="0"></button>
+                    <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2"
+                        data-carousel-slide-to="1"></button>
+                    <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3"
+                        data-carousel-slide-to="2"></button>
+                </div>
+                <!-- Slider controls -->
+                <button type="button"
+                    class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
+                    data-carousel-prev>
+                    <span
+                        class="inline-flex items-center justify-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                        <svg aria-hidden="true" class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800" fill="none"
+                            stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7">
+                            </path>
+                        </svg>
+                        <span class="sr-only">Previous</span>
+                    </span>
+                </button>
+                <button type="button"
+                    class="absolute top-0 right-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
+                    data-carousel-next>
+                    <span
+                        class="inline-flex items-center justify-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                        <svg aria-hidden="true" class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800" fill="none"
+                            stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7">
+                            </path>
+                        </svg>
+                        <span class="sr-only">Next</span>
+                    </span>
+                </button>
+            </div>
+
+
+        </section>
         <!-- faq section -->
         <section></section>
         <!-- contact us section -->
@@ -157,6 +231,8 @@
 
     <!-- tailwind.config.js -->
     <script src="tailwind.config.js"></script>
+    <!-- flowbite -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
 </body>
 
 </html>
