profile and caption added

--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -167,6 +167,12 @@
                     <div class="duration-700 ease-in-out" data-carousel-item="active">
                         <img src="images/slider-1.jpg"
                             class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+                            <div class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2">
+                                <img src="images/profile.png" alt="">
+                                <h3>Awlad Hossain</h3>
+                                <p>UIX Designer</p>
+                                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                            </div>
                     </div>
                     <!-- Item 2 -->
                     <div class="duration-700 ease-in-out" data-carousel-item>
